# mcp-registro-ingreso

./: .dockerignore  .env.example  CHANGELOG_TECHNICAL.md  Dockerfile  README.md  check_date.py  check_merge.py  db_cleanup.py  debug_alexis_counts.py  diagnose_mismatch.py  discover_typos.py  dump_salgado.py  find_alexis.py  get_data.py  http_server_other_app.py  list_puntos.py  mcp server integration guide.MD  pyproject.toml  result.txt  run_maintenance.py  run_maintenance_debug.py  run_merge.py  server_other_app.py  test_filter.py  test_mcp.py  test_partial.py
src/mcp_reportes/: __init__.py  database.py  server.py
src/mcp_reportes/tools/: __init__.py  empleados.py  nomina.py  registros.py  reportes.py
src/mcp_reportes/utils/: __init__.py  calculos.py  fechas.py
